# league-registrar

./: .gitignore  pyproject.toml
src/leagueregistrar/: __init__.py  dbutils.py  models.py  registrar.py  types.py
tests/: test.py
